--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,34 @@
 asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
 Django==5.2.4
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 dotenv==0.9.9
+filelock==3.18.0
+fsspec==2025.7.0
+hf-xet==1.1.7
+huggingface-hub==0.34.4
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.2
+packaging==25.0
 psycopg==3.2.9
 python-dotenv==1.1.1
+PyYAML==6.0.2
+regex==2025.7.34
+requests==2.32.4
+safetensors==0.6.2
 setuptools==78.1.1
 sqlparse==0.5.3
+sympy==1.14.0
+tokenizers==0.21.4
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.55.0
+typing_extensions==4.14.1
+urllib3==2.5.0
 wheel==0.45.1
-psycopg2-binary
